--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
     "koa-static": "^4.0.2",
     "koa-webpack": "^1.0.0",
+    "normalize.css": "^7.0.0",
     "opn": "^5.1.0",
+    "style-loader": "^0.19.0",
     "vue": "^2.5.9",
     "vue-loader": "^13.5.0",
     "webpack": "^3.8.1"
