--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-scroll-load",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Pull up loading. Pull down refresh.",
   "main": "index.js",
   "directories": {
@@ -26,8 +26,7 @@
     "vue-loader": "^13.5.0",
     "webpack": "^3.8.1"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wedog/vue-scroll-load.git"
