--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-scroll-load",
   "version": "1.0.1",
   "description": "Pull up loading. Pull down refresh.",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "example": "examples"
   },
